OPEN - task 132: UnitTests for sensor framework http://github.com/knowing/Medmon/issues/issue/132